--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>4H</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -35,7 +35,7 @@
         </div>
         
     </header>
-    <div class="rline">
+    <section class="rline">
         <marquee behavior="scroll" direction="right" class="marquee">
             <div class="marquee__div">
                 <p class="marquee__text">Дело помощи утопающим — дело рук самих утопающих! </p>
@@ -46,7 +46,7 @@
                 <span class="marquee__elipse"></span>
             </div>
         </marquee>
-    </div>
+    </section>
     <main class="main">
         <div class="container main-container">
             <div class="main-all">
@@ -95,18 +95,129 @@
                                 </tr>
                             </tbody>
                         </table>
+                        <div class="session__mobile-table">
+                            <p class="mobile-q">Место проведения:</p>
+                            <p class="mobile-a">Клуб «Картонажник»</p>
+                            <hr class="session__mobile-table_hr">
+                            <p class="mobile-q">Дата и время мероприятия:</p>
+                            <p class="mobile-a">22 июня 1927 г. в 18:00</p>
+                            <hr class="session__mobile-table_hr">
+                            <p class="mobile-q">Стоимость входных билетов:</p>
+                            <p class="mobile-a">20 коп.</p>
+                            <hr class="session__mobile-table_hr">
+                            <div style="display: flex; gap: 12px;">
+                                <p class="mobile-q mobile-q1">Плата за игру:</p>
+                                <p class="mobile-a">50 коп.</p>
+                            </div>
+                            <hr class="session__mobile-table_hr">
+                            <p class="mobile-q">Взнос на телеграммы:</p>
+                            <p class="mobile-a"><span class="table__span">100 руб.</span> 21 руб. 16 коп.</p>
+                        </div>
                         <a class="session__info_questions" href="#">По всем вопросам обращаться в администрацию к К. Михельсону</a>
                     </div>
                 </div>
             </div>
         </div>
     </main>
-    <div class="stages">
+    <!-- <section class="stages">
         <div class="container">
             <div class="stages-all">
-
+                <div class="stages__title">
+                    <h2 class="stages__title_h2">Этапы преображения </h2>
+                    <div class="stages__title_text">
+                        <p class="stages__title_text1">Васюков</p>
+                        <p class="stages__title_text2">Будущие источники <br>обогащения Васюкинских</p>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
+    </section> -->
+    <section class="players">
+        <div class="container players-container">
+            <div class="players-all">
+                <div class="players__title">
+                    <h2 class="players__title_h2">Участники турнира</h2>
+                    <div class="players__title_buttons players-buttons">
+                        <button class="players-button__left"><svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 44 44" fill="none">
+                            <circle cx="22" cy="22" r="22" transform="rotate(-180 22 22)" fill="#313131"/>
+                            <path d="M24.5382 30.4614L16.0767 21.9999L24.5382 13.5384" stroke="white" stroke-width="2" stroke-linecap="square"/>
+                            </svg>
+                        </button>
+                        <div class="players-button__info">
+                            <p class="players-button__info_text1">3</p>
+                            <p class="players-button__info_text2">/</p>
+                            <p class="players-button__info_text3">6</p>
+                        </div>
+                        <button class="players-button__right">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 44 44" fill="none">
+                                <circle cx="22" cy="22" r="22" fill="#313131"/>
+                                <path d="M19.4618 13.5385L27.9233 22L19.4618 30.4615" stroke="white" stroke-width="2" stroke-linecap="square"/>
+                              </svg>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-2__players">
+            <div class="players-articles">
+                <article class="players-article">
+                    <img  class="players-article__img" src="./img/player-img.webp" alt="фото игрока в шахматы">
+                    <p class="players-article__name">Хозе-Рауль Капабланка</p>
+                    <p class="players-article__status">Чемпион мира по шахматам</p>
+                    <button class="players-article__button">Подробнее</button>
+                </article>
+                <article class="players-article">
+                    <img  class="players-article__img" src="./img/player-img.webp" alt="фото игрока в шахматы">
+                    <p class="players-article__name">Эммануил Ласкер</p>
+                    <p class="players-article__status">Чемпион мира по шахматам</p>
+                    <button class="players-article__button">Подробнее</button>
+                </article>
+                <article class="players-article">
+                    <img  class="players-article__img" src="./img/player-img.webp" alt="фото игрока в шахматы">
+                    <p class="players-article__name">Александр Алехин</p>
+                    <p class="players-article__status">Чемпион мира по шахматам</p>
+                    <button class="players-article__button">Подробнее</button>
+                </article>
+                <article class="players-article">
+                    <img  class="players-article__img" src="./img/player-img.webp" alt="фото игрока в шахматы">
+                    <p class="players-article__name">Арон Нимцович</p>
+                    <p class="players-article__status">Чемпион мира по шахматам</p>
+                    <button class="players-article__button">Подробнее</button>
+                </article>
+                <article class="players-article">
+                    <img  class="players-article__img" src="./img/player-img.webp" alt="фото игрока в шахматы">
+                    <p class="players-article__name">Рихард Рети</p>
+                    <p class="players-article__status">Чемпион мира по шахматам</p>
+                    <button class="players-article__button">Подробнее</button>
+                </article>
+                <article class="players-article">
+                    <img  class="players-article__img" src="./img/player-img.webp" alt="фото игрока в шахматы">
+                    <p class="players-article__name">Остап Бендер</p>
+                    <p class="players-article__status">Гроссмейстер</p>
+                    <button class="players-article__button">Подробнее</button>
+                </article>
+            </div>
+        </div>
+        <div class="players-container">
+            <div class="players-buttons__mobile">
+                <button class="players-button__left"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 44 44" fill="none">
+                    <circle cx="22" cy="22" r="22" transform="rotate(-180 22 22)" fill="#313131"/>
+                    <path d="M24.5382 30.4614L16.0767 21.9999L24.5382 13.5384" stroke="white" stroke-width="2" stroke-linecap="square"/>
+                    </svg>
+                </button>
+                <div class="players-button__info">
+                    <p class="players-button__info_text1">3</p>
+                    <p class="players-button__info_text2">/</p>
+                    <p class="players-button__info_text3">6</p>
+                </div>
+                <button class="players-button__right">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 44 44" fill="none">
+                        <circle cx="22" cy="22" r="22" fill="#313131"/>
+                        <path d="M19.4618 13.5385L27.9233 22L19.4618 30.4615" stroke="white" stroke-width="2" stroke-linecap="square"/>
+                      </svg>
+                </button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
