--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
             </div>
         </div>
     </main>
-    <!-- <section class="stages">
-        <div class="container">
+    <section class="stages">
+        <div class="container stages-container">
             <div class="stages-all">
                 <div class="stages__title">
                     <h2 class="stages__title_h2">Этапы преображения </h2>
@@ -129,9 +129,107 @@
                         <p class="stages__title_text2">Будущие источники <br>обогащения Васюкинских</p>
                     </div>
                 </div>
+                <div class="stages__title_mobile">
+                    <h2 class="stages__title_mobile-h2">Этапы преображения Васюков</h2>
+                    <p class="stages__title_mobile-text">Будущие источники обогащения Васюкинских</p>
+                </div>
+                <div class="stages-articles">
+                    <article class="stages-article">
+                        <div class="stages-article__div">
+                            <p class="stages-article__div_number">1</p>
+                        </div>
+                        <p class="stages-article__text">Строительство железнодорожной магистрали Москва-Васюки</p>
+                    </article>
+                    <article class="stages-article">
+                        <div class="stages-article__div">
+                            <p class="stages-article__div_number">2</p>
+                        </div>
+                        <p class="stages-article__text">Открытие фешенебельной гостиницы «Проходная пешка» и других небоскрёбов</p>
+                    </article>
+                    <article class="stages-article">
+                        <div class="stages-article__div">
+                            <p class="stages-article__div_number">3</p>
+                        </div>
+                        <p class="stages-article__text">Поднятие сельского хозяйства в радиусе на тысячу километров: производство овощей, фруктов, икры, шоколадных конфет</p>
+                    </article>
+                    <article class="stages-article">
+                        <div class="stages-article__div">
+                            <p class="stages-article__div_number">4</p>
+                        </div>
+                        <p class="stages-article__text">Строительство дворца для турнира</p>
+                    </article>
+                    <article class="stages-article">
+                        <div class="stages-article__div">
+                            <p class="stages-article__div_number">5</p>
+                        </div>
+                        <p class="stages-article__text">Размещение гаражей для гостевого автотранспорта</p>
+                    </article>
+                    <article class="stages-article">
+                        <div class="stages-article__div">
+                            <p class="stages-article__div_number">6</p>
+                        </div>
+                        <p class="stages-article__text">Постройка сверхмощной радиостанции для передачи всему миру сенсационных результатов</p>
+                    </article>
+                    <article class="stages-article">
+                        <div class="stages-article__div">
+                            <p class="stages-article__div_number">7</p>
+                        </div>
+                        <p class="stages-article__text">Создание аэропорта «Большие Васюки» с регулярным отправлением почтовых самолётов и дирижаблей во все концы света, включая Лос-Анжелос и Мельбурн</p>
+                        <img class="stages-article__img" src="./img/airplane.png" alt="самолет">
+                    </article>
+                </div>
             </div>
         </div>
-    </section> -->
+        <div class="stages-articles__mobile">
+            <article class="stages-articles__mobile_1a2">
+                <article class="stages-article__mobile">
+                    <div class="stages-article__div">
+                        <p class="stages-article__div_number">1</p>
+                    </div>
+                    <p class="stages-article__mobile_text">Строительство железнодорожной магистрали Москва-Васюки</p>
+                </article>
+                <article class="stages-article__mobile">
+                    <div class="stages-article__div">
+                        <p class="stages-article__div_number">2</p>
+                    </div>
+                    <p class="stages-article__mobile_text">Открытие фешенебельной гостиницы «Проходная пешка» и других небоскрёбов</p>
+                </article>
+                <img class="stages-article__img" src="./img/airplane.png" alt="самолет">
+            </article>
+            <article class="stages-article__mobile_3">
+                <div class="stages-article__div">
+                    <p class="stages-article__div_number">3</p>
+                </div>
+                <p class="stages-article__mobile_text">Поднятие сельского хозяйства в радиусе на тысячу километров: производство овощей, фруктов, икры, шоколадных конфет</p>
+            </article>
+            <article class="stages-articles__mobile_4a5">
+                <article class="stages-article__mobile_4">
+                    <div class="stages-article__div">
+                        <p class="stages-article__div_number">4</p>
+                    </div>
+                    <p class="stages-article__mobile_text">Строительство дворца для турнира</p>
+                </article>
+                <article class="stages-article__mobile_4">
+                    <div class="stages-article__div">
+                        <p class="stages-article__div_number">5</p>
+                    </div>
+                    <p class="stages-article__mobile_text">Размещение гаражей для гостевого автотранспорта</p>
+                </article>
+            </article>
+            <article class="stages-article__mobile_6">
+                <div class="stages-article__div">
+                    <p class="stages-article__div_number">6</p>
+                </div>
+                <p class="stages-article__mobile_text">Постройка сверхмощной радиостанции для передачи всему миру сенсационных результатов</p>
+            </article>
+            <article class="stages-article__mobile_7">
+                <div class="stages-article__div">
+                    <p class="stages-article__div_number">7</p>
+                </div>
+                <p class="stages-article__mobile_text">Создание аэропорта «Большие Васюки» с регулярным отправлением почтовых самолётов и дирижаблей во все концы света, включая Лос-Анжелос и Мельбурн</p>
+            </article>
+        </div>
+    </section>
     <section class="players">
         <div class="container players-container">
             <div class="players-all">
@@ -219,5 +317,24 @@
             </div>
         </div>
     </section>
+    <section class="rline">
+        <marquee behavior="scroll" direction="right" class="marquee">
+            <div class="marquee__div">
+                <p class="marquee__text">Дело помощи утопающим — дело рук самих утопающих! </p>
+                <span class="marquee__elipse"></span>
+                <p class="marquee__text">Шахматы двигают вперед не только культуру, но и экономику!</p>
+                <span class="marquee__elipse"></span>
+                <p class="marquee__text">Лед тронулся, господа присяжные заседатели!</p>
+                <span class="marquee__elipse"></span>
+            </div>
+        </marquee>
+    </section>
+    <footer class="footer">
+        <div class="container footer-container">
+            <div class="footer-all">
+                <p class="footer__info">Все персонажи, события и цитаты являются вымышленными и не принадлежат создателям сайта. С подробностями можно познакомиться в главе XXXIV романа Ильи Ильфа и Евгения Петрова «Двенадцать стульев».</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
