--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>4H</title>
+    <link rel="shortcut icon" href="./img/Vector (1).svg" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -39,9 +40,13 @@
         <marquee behavior="scroll" direction="right" class="marquee">
             <div class="marquee__div">
                 <p class="marquee__text">Дело помощи утопающим — дело рук самих утопающих! </p>
-                <span class="marquee__elipse"></span>
+                <svg class="marquee__elipse" xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 6 6" fill="none">
+                <circle cx="3" cy="3" r="3" fill="white"/>
+                </svg>
                 <p class="marquee__text">Шахматы двигают вперед не только культуру, но и экономику!</p>
-                <span class="marquee__elipse"></span>
+                <svg class="marquee__elipse" xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 6 6" fill="none">
+                    <circle cx="3" cy="3" r="3" fill="white"/>
+                    </svg>
                 <p class="marquee__text">Лед тронулся, господа присяжные заседатели!</p>
                 <span class="marquee__elipse"></span>
             </div>
@@ -194,7 +199,7 @@
                     </div>
                     <p class="stages-article__mobile_text">Открытие фешенебельной гостиницы «Проходная пешка» и других небоскрёбов</p>
                 </article>
-                <img class="stages-article__img" src="./img/airplane.png" alt="самолет">
+                <img class="stages-article__mobile_img-1" src="./img/airplane.png" alt="самолет">
             </article>
             <article class="stages-article__mobile_3">
                 <div class="stages-article__div">
@@ -226,8 +231,40 @@
                 <div class="stages-article__div">
                     <p class="stages-article__div_number">7</p>
                 </div>
-                <p class="stages-article__mobile_text">Создание аэропорта «Большие Васюки» с регулярным отправлением почтовых самолётов и дирижаблей во все концы света, включая Лос-Анжелос и Мельбурн</p>
+                <p class="stages-article__mobile_text stages-article__mobile_text-7">Создание аэропорта «Большие Васюки» с регулярным отправлением почтовых самолётов и дирижаблей во все концы света, включая Лос-Анжелос и Мельбурн</p>
+                <img class="stages-article__mobile_img-7" src="./img/airplane.png" alt="самолет">
             </article>
+        </div>
+        <div class="container stages-container">
+            <div class="stages-buttons">
+                <button class="stages-button"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 44 44" fill="none">
+                    <circle cx="22" cy="22" r="22" transform="rotate(-180 22 22)" fill="#313131"/>
+                    <path d="M24.5382 30.4614L16.0767 21.9999L24.5382 13.5384" stroke="white" stroke-width="2" stroke-linecap="square"/>
+                    </svg>
+                </button>
+                <div class="stages-buttons__nav">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10" fill="none">
+                        <circle cx="5" cy="5" r="5" fill="#313131"/>
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10" fill="none">
+                        <circle cx="5" cy="5" r="5" fill="#D9D9D9"/>
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10" fill="none">
+                        <circle cx="5" cy="5" r="5" fill="#D9D9D9"/>
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10" fill="none">
+                        <circle cx="5" cy="5" r="5" fill="#D9D9D9"/>
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10" fill="none">
+                        <circle cx="5" cy="5" r="5" fill="#D9D9D9"/>
+                    </svg>
+                </div>
+                <button class="stages-button"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
+                    <circle cx="18" cy="18" r="18" fill="#313131"/>
+                    <path d="M15.9232 11.0769L22.8463 18L15.9232 24.9231" stroke="white" stroke-width="1.63636" stroke-linecap="square"/>
+                    </svg>
+                </button>
+            </div>
         </div>
     </section>
     <section class="players">
@@ -321,9 +358,13 @@
         <marquee behavior="scroll" direction="right" class="marquee">
             <div class="marquee__div">
                 <p class="marquee__text">Дело помощи утопающим — дело рук самих утопающих! </p>
-                <span class="marquee__elipse"></span>
+                <svg class="marquee__elipse" xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 6 6" fill="none">
+                <circle cx="3" cy="3" r="3" fill="white"/>
+                </svg>
                 <p class="marquee__text">Шахматы двигают вперед не только культуру, но и экономику!</p>
-                <span class="marquee__elipse"></span>
+                <svg class="marquee__elipse" xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 6 6" fill="none">
+                <circle cx="3" cy="3" r="3" fill="white"/>
+                </svg>
                 <p class="marquee__text">Лед тронулся, господа присяжные заседатели!</p>
                 <span class="marquee__elipse"></span>
             </div>
